<resources>
    <string name="hello">Hello World, GenieTest!</string>
<string name="app_name">GenieLogin</string>
<string name="wireless">Wireless Settings</string>
<string name="settings">Settings</string>
<string name="guestaccess">Guest Access</string>
<string name="guestsettings">Guest Settings</string>
<string name="map">Network Map</string>
<string name="traffic">Traffic Meter</string>
<string name="speedtest">SpeedTest</string>
<string name="readyshare">ReadyShare</string>
<string name="parentalcontrl">Parental Controls</string>
<string name="marketplace">Marketplace</string>
<string name="filebrowse">FileBrowse</string>
<string name="loadingtraffic">Loading Traffic Meter</string>
<string name="loadingmap">Loading Network Map</string>
<string name="loadingguestaccess">Loading Guest Access</string>
<string name="loadingwireless">Loading Wireless Settings</string>
<string name="loadingparentalcontrl">Loading Parental Controls</string>
<string name="loadingmymedia">Loading My Media</string>
<string name="remeberpassword">Remember password</string>
<string name="login">Login</string>
<string name="ok">OK</string>
<string name="cancel">Cancel</string>
<string name="username">Username:admin</string>
<string name="password">Pls input password ...</string>
<string name="wirelessname">Name/SSID</string>
<string name="name">SSID</string>
<string name="channel">Channel</string>
<string name="networkkey">Key/Password</string>
<string name="key">Password</string>
<string name="securityoptions">Security Options</string>
<string name="inputurl">Enter a website to test its downloading speed.</string>
<string name="menu_item01">menu_item01</string>
<string name="menu_item02">menu_item02</string>
<string name="Period">Counting Period</string>
<string name="Time">Connection Time(H:M)</string>
<string name="Upload">Upload/Avg(M)</string>
<string name="Download">Download/Avg(M)</string>
<string name="Total">Total/Avg(M)</string>
<string name="Lpc_status">Status</string>
<string name="Lpc_control">Parental Controls</string>
<string name="Enable">Enable</string>
<string name="Disable">Disable</string>
<string name="Filteringlevel">Filtering level </string>
<string name="OpenDNSaccount">OpenDNS Account</string>
<string name="Filteringchang">Change Basic Setting</string>
<string name="lpc_Positive">Previous</string>
<string name="lpc_Negative">Next</string>
<string name="Lpc_done">Done</string>
<string name="lpc_presignlntitle">Setting up Live Parental Controls</string>
<string name="lpc_createtitle">Create a free OpenDNS account</string>
<string name="lpc_createname">Username</string>
<string name="lpc_createpassword">Password</string>
<string name="lpc_createpassword2">Confirm Password</string>
<string name="lpc_createemail">Email</string>
<string name="lpc_createemail2">Confirm Email</string>
<string name="lpc_createeinvalidmail">Invalid Email</string>
<string name="lpc_createcheck">Check availability</string>
<string name="lpcsignintitle">Sign in to your OpenDNS account</string>
<string name="lpcsigninintro">Please enter your username and password below.</string>
<string name="lpc_createintro">Please enter your information below.</string>
<string name="lpc_intro"></string>
<string name="lpc_presignintro">Welcome, this setup wizard will quickly configure NETGEAR Live Parental Controls powered by OpenDNS on your NETGEAR router.</string>
<string name="lpc_presignintro1">In order to use Live Parental Controls, you need a free OpenDNS account. Have you already have one?</string>
<string name="lpc_presigninexist">Yes, use my existing OpenDNS account</string>
<string name="lpc_presignincreate">No, I need to create a free OpenDNS account</string>
<string name="lpcsettitle">Filtering Level</string>
<string name="lpcsetintro">All computers connected to your router will be protected from the content you select below. You can customize your Live Parental Controls later on our website.</string>
<string name="lpcset_none">None</string>
<string name="lpcset_none_text">Nothing blocked.</string>
<string name="lpcset_minimal">Minimal</string>
<string name="lpcset_minimal_text">Protects only against phishing attacks.</string>
<string name="lpcset_low">Low</string>
<string name="lpcset_low_text">Protects against pornography and phishing attacks.</string>
<string name="lpcset_moderate">Moderate</string>
<string name="lpcset_moderate_text">Protects against all adult-related sites, illegal activity and phishing attacks.</string>
<string name="lpcset_high">High</string>
<string name="lpcset_high_text">Protects against all adult-related sites, illegal activity, social networking sites, video sharing sites, phishing attacks and general time-wasters</string>
<string name="lpc">Parental Controls</string>
<string name="lpc_donetitle">Setup is complete!</string>
<string name="lpc_doneintro">You have successfully setup NETGEAR Live Parental Controls powered by OpenDNS. Next time you run the Management Utility, it will take you to the status screen where you can: </string>
<string name="lpc_doneintro1">check whether Live Parental Controls are enabled</string>
<string name="lpc_doneintro2">disable or enable Live Parental Controls</string>
<string name="lpc_doneintro3">modify basic settings</string>
<string name="lpc_doneintro4">change custom settings such as per-user and time-of-day based Live Parental Controls</string>
<string name="lpc_done_bttext">Take me to the status screen</string>
<string name="lpc_introtitle">Please Note</string>
<string name="lpc_introtext">To set Live Parental Controls, you need an OpenDNS account. Do you already have an account?</string>
<string name="lpc_enable">Enabled</string>
<string name="lpc_disable">Disable</string>
<string name="main_wifi_disable">Wi-Fi disabled</string>
<string name="main_net_disable">net disable</string>
<string name="search">Search</string>
<string name="speedtest_text">Your current downloading speed from this website is </string>
<string name="Kbps">Kbps</string>
<string name="message_dialog_save">save ?</string>
<string name="success">success</string>
<string name="failure">failure</string>
<string name="on">On</string>
<string name="off">Off</string>
<string name="Clickhere">Click here</string>
<string name="Lpc_manage_nothing">Nothing blocked.</string>
<string name="lpc_manage_customset">Change Custom Settings</string>
<string name="number">Number</string>
<string name="notenabled">Not Enabled</string>
<string name="connected">Connected</string>
<string name="guestaccess_time">Time Period</string>
<string name="guestaccess_security">Security Options</string>
<string name="disableguest_text">Guest Access is in use. Disabling it could disrupt active traffic on the wireless network. Do you want to continue?</string>
<string name="wpa">Security</string>
<string name="about_title">About NETGEAR Genie</string>
<string name="about_info">Copyright (c) 2013, NETGEAR Inc.\nAll Rights Reserved.</string>
<string name="powered_by">Powered by SiteView</string>
<string name="version">Version</string>
<string name="close">Close</string>
<string name="notsupport">The router does not support this function.</string>
<string name="gatewaydev">Router</string>
<string name="networkdev">Network Device</string>
<string name="windowspc">Windows PC</string>
<string name="blurayplayer">Blu-ray Player</string>
<string name="bridge">Bridge</string>
<string name="cablestb">Cable STB</string>
<string name="cameradev">Camera</string>
<string name="gamedev">Gaming Console</string>
<string name="imacdev">iMac</string>
<string name="ipad">iPad</string>
<string name="iphone">iPhone</string>
<string name="ipodtouch">iPod Touch</string>
<string name="linuxpc">Linux PC</string>
<string name="macbookdev">MacBook</string>
<string name="macminidev">Mac Mini</string>
<string name="macprodev">Mac Pro</string>
<string name="mediadev">Media Device</string>
<string name="mobiledev">Smart Phone</string>
<string name="netstoragedev">Storage</string>
<string name="switchdev">Switch</string>
<string name="printerdev">Printer</string>
<string name="repeater">Repeater</string>
<string name="satellitestb">Satellite STB</string>
<string name="scannerdev">Scanner</string>
<string name="slingbox">SlingBox</string>
<string name="stb">Other STB</string>
<string name="tablepc">Tablet</string>
<string name="tv">TV</string>
<string name="unixpc">UNIX PC</string>
<string name="map_custom">Custom Name</string>
<string name="map_type">Type</string>
<string name="map_ip">IP Address</string>
<string name="map_mac">MAC Address</string>
<string name="modify">Modify</string>
<string name="refresh">Refresh</string>
<string name="apply">Apply</string>
<string name="custom">Custom</string>
<string name="spinner_prompt">Choose a planet</string>
<string name="Traffic_set_text_1">Restart Traffic Counter at</string>
<string name="traffic_set_text_2">Traffic Meter Start Time</string>
<string name="traffic_set_hour">Hour</string>
<string name="traffic_set_minute">Minute</string>
<string name="traffic_set_text_3">On the </string>
<string name="traffic_set_text_4">day of each month</string>
<string name="inputerror">Input error</string>
<string name="today">Today</string>
<string name="yesterday">Yesterday</string>
<string name="this_week">This week</string>
<string name="this_month">This month</string>
<string name="last_month">Last month</string>
<string name="wifisettext">Without Wi-Fi, it can\'t open Genie. Turn on Wi-Fi now?</string>
<string name="traffic_disable_text">Disable Traffic Meter. Do you want to continue?</string>
<string name="traffic_able_text">Enable Traffic Meter. Do you want to continue?</string>
<string name="login_username">User Name</string>
<string name="login_password">Password</string>
<string name="login_alertinfo">Login failed! Please check to see if this computer is connected to the NETGEAR router.</string>
<string name="wait">Please wait...</string>
<string name="bad_password">Login failed. Please re-enter the correct admin password for your NETGEAR router.</string>
<string name="search_hint">Search Support</string>
<string name="logout">Logout</string>
<string name="about">About</string>
<string name="back">Back</string>
<string name="enablelpccontrol">Enable Live Parental Controls</string>
<string name="loading">Loading</string>
<string name="pleasewait">Please wait</string>
<string name="wirelsssettin">Changing settings can disrupt active traffic on the wireless network. Do you want to continue?</string>
<string name="setwait">Receiving router response information, please wait </string>
<string name="seconds">seconds</string>
<string name="login_default">(Default is \&quot;password\&quot;)</string>
<string name="wirelsssettinrelogin">Wireless setting was changed successfully. Please re-join your wireless network by using new wireless setting and login to Genie.</string>
<string name="mymedia">My Media</string>
<string name="dlna_server">Source</string>
<string name="dlna_render">Player</string>
<string name="dlna_control">Playing</string>
<string name="dlna_option">Options</string>
<string name="menu_zoom">Zoom</string>
<string name="menu_pan">Pan</string>
<string name="menu_reset">Reset</string>
<string name="notnetgearrouter">NETGEAR router is not found or is not <a href="http://www.netgear.com/landing/en-us/netgear-genie-routers.aspx">supported</a>.</string>
<string name="s_smartlogin_url_1"><a href="https://genie.netgear.com/UserProfile/#ForgotPasswordPlace:">Forgot your password?</a></string>
<string name="s_smartlogin_url_2">Don\'t have an ID? <a href="https://genie.netgear.com/UserProfile/#NewUserPlace:">Sign up</a></string>
<string name="s_smartlogin_3">Remember my ID and password</string>
     <string name="radio_filechooese">选择</string>
    <string name="radio_copy">复制</string>
    <string name="radio_cut">剪切</string>
    <string name="radio_paste">粘贴</string>
    <string name="radio_up">向上</string>
    <string name="radio_new">新建</string>
    <string name="radio_list">列表</string>
</resources>