<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5FB">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/smartnetworklogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" android:layout_margin="8dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/lpc_createemail" >
        </TextView>

        <EditText
            android:id="@+id/smartusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:singleLine="true">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/smartpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone" 
            android:password="true"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/fogotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/s_smartlogin_url_1" android:layout_gravity="right"/>
        
         <CheckBox 
                android:id="@+id/remember"
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content" 
            	android:textColor="@android:color/black"
            	android:text="@string/s_smartlogin_3"/>

		<TableLayout
  					android:layout_height="wrap_content" 
  					android:layout_width="fill_parent" android:layout_marginTop="15dip">
  				<TableRow> 	
  				    <Button 	
 							android:layout_height="wrap_content"
 							android:gravity="center"
 							android:id="@+id/button_cancel"
 							android:layout_marginBottom="10dip" 
 							android:layout_marginLeft="10dip" 
 							android:layout_marginRight="10dip" 
 							android:text="@string/cancel" 
 							android:layout_width="fill_parent" 
 							android:layout_weight="1"/>
  				    		
 					<Button 	
 							android:layout_height="wrap_content"
 							android:gravity="center"
 							android:id="@+id/button_ok"
 							android:layout_marginBottom="10dip" 
 							android:layout_marginLeft="10dip" 
 							android:layout_marginRight="10dip" 
 							android:text="@string/login" 
 							android:layout_width="fill_parent" 
 							android:layout_weight="1.2"/>
 					
 				</TableRow>

  				
 				</TableLayout>		
 		<TextView
  				    android:id="@+id/signup"
  				    android:layout_width="wrap_content"
  				    android:layout_height="wrap_content"
  				    android:textColor="@android:color/black"
  				    android:text="@string/s_smartlogin_url_2" android:layout_gravity="right"/>
 			
        
    </LinearLayout>

</RelativeLayout>
</ScrollView>