<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 	
				xmlns:android="http://schemas.android.com/apk/res/android"
 				android:layout_height="fill_parent" 
 				android:layout_width="fill_parent"
 				android:orientation="vertical">
 <LinearLayout 	
 				android:layout_height="wrap_content" 
 				android:layout_width="wrap_content"
 				android:orientation="horizontal" >			
  	 			<RelativeLayout
  					android:layout_width="wrap_content"
  					android:layout_height="wrap_content" android:layout_margin="5dip">
  					<ImageView
  						android:id="@+id/login_icon"
  						android:layout_height="wrap_content"
  						android:layout_width="wrap_content" 
  						android:layout_alignParentLeft="true" android:layout_centerVertical="true">
  					</ImageView>
        			<TextView 	android:id="@+id/login_title" 
 						android:layout_height="wrap_content"
  						android:layout_width="wrap_content" 
  						android:textColor="#FFFFFF" 
  						android:layout_alignLeft="@+id/login_icon" 
  						android:gravity="center_vertical" 
  						android:layout_centerInParent="true" android:textSize="22dp"/>	
  					<ProgressBar
  	 						android:layout_width="wrap_content"
        					android:layout_height="wrap_content" 
        					android:id="@+id/progress" android:layout_marginLeft="5dp" android:layout_alignParentRight="true" android:visibility="invisible"/>		
  				</RelativeLayout>	
</LinearLayout>									
  <View  android:layout_height="1px"
  			android:layout_width="fill_parent"
         android:background="#A9A9A9" />	 				
<ScrollView 	xmlns:android="http://schemas.android.com/apk/res/android"
 				android:id="@+id/Logindialog_SV" 
 				android:layout_height="wrap_content" 
 				android:layout_width="wrap_content">

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

<LinearLayout 	
				android:id="@+id/Logindialog_LV"
				xmlns:android="http://schemas.android.com/apk/res/android"
 				android:layout_height="fill_parent" 
 				android:layout_width="fill_parent"
 				android:orientation="vertical">
			
 				
 	<TextView 	android:id="@+id/alertinfo" 
 				android:layout_height="fill_parent"
  				android:layout_width="wrap_content" 
  				android:text="@string/login_alertinfo" 
  				android:visibility="gone" 
  				android:layout_margin="5dp" android:textSize="19sp"/>
 	<TextView 	android:id="@+id/nonetgearrouter" 
 				android:layout_height="fill_parent"
  				android:layout_width="wrap_content" 
  				android:text="@string/notnetgearrouter" 
  				android:visibility="gone" 
  				android:layout_margin="5dp" android:textSize="19sp"/>
  				
  	<TextView 	android:id="@+id/bad_password" 
 				android:layout_height="fill_parent"
  				android:layout_width="wrap_content" 
  				android:text="@string/bad_password" 
  				android:layout_gravity="center"
  				android:visibility="gone" 
  				android:layout_marginTop="3dp" 
  				android:textSize="19sp"/>			
  				
  	<TextView 	android:id="@+id/wait_text" 
 				android:layout_height="fill_parent"
  				android:layout_width="wrap_content" 
  				android:layout_gravity="center"
  				android:text="@string/wait" 
  				android:layout_marginTop="3dp" 
  				android:visibility="invisible"/>	
 
	<TextView 	android:id="@+id/usernametv" 
 				android:layout_height="fill_parent"
  				android:layout_width="fill_parent" android:text="@string/login_username" android:textSize="16dp" android:layout_marginTop="3dp" android:layout_marginLeft="5dp"/>	

 	<EditText 	android:id="@+id/username" 
 				android:layout_height="fill_parent"
  				android:layout_width="fill_parent" 
  				android:editable="false"
  				android:enabled="false"
  				android:text="admin" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
  	<TextView 	android:id="@+id/passwordtv" 
 				android:layout_height="fill_parent"
  				android:layout_width="fill_parent" android:text="@string/login_password" android:textSize="16sp" android:layout_marginTop="3dp" android:layout_marginLeft="5dp"/>				
 
 	<EditText 	android:id="@+id/password" 
 				android:layout_height="fill_parent"
 				android:layout_width="fill_parent" 
 				android:singleLine="true"
 				android:layout_marginLeft="5dp"
 				android:layout_marginRight="5dp"
 				android:imeActionId="2"
 				android:imeOptions="actionGo" android:password="true"/>
  		
  	<TextView 	android:id="@+id/default_tv" 
 				android:layout_height="fill_parent"
  				android:layout_width="fill_parent" 
  				android:textSize="16sp" 
  				android:layout_marginTop="3dp" 
  				android:layout_marginLeft="5dp" android:text="@string/login_default" android:gravity="center"/>							
	<CheckBox 	android:id="@+id/remeberpassword" 
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent"
				android:text="@string/remeberpassword" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>

</LinearLayout>

	

<RelativeLayout style="android:style/ButtonBar"
				android:id="@+id/test444" 
				android:layout_height="wrap_content" 
 				android:layout_below="@+id/Logindialog_LV" 
 				android:layout_width="wrap_content">
 				<LinearLayout 	
 				android:layout_height="wrap_content" 
 				android:layout_width="fill_parent"
 				android:orientation="horizontal" android:layout_alignRight="@+id/wait_view">
 				<TableLayout
  					android:layout_height="wrap_content" 
  					android:layout_width="fill_parent">
  				<TableRow> 			
 					<Button 	
 							android:layout_height="wrap_content"
 							android:gravity="center"
 							android:id="@+id/login_ok" 
 							android:layout_marginBottom="10dip" 
 							android:layout_marginLeft="10dip" 
 							android:layout_marginRight="10dip" android:text="@string/ok" android:layout_width="fill_parent" android:layout_weight="1.2"/>

 					<Button 	
 							android:layout_height="wrap_content"
 							android:gravity="center"
 							android:id="@+id/login_cancel" 
 							android:layout_marginBottom="10dip" 
 							android:layout_marginLeft="10dip" 
 							android:layout_marginRight="10dip" android:text="@string/cancel" android:layout_width="fill_parent" android:layout_weight="1"/>
 				</TableRow> 
 				</TableLayout>			
				</LinearLayout>
</RelativeLayout>
  
</RelativeLayout>
</ScrollView>  
</LinearLayout>
